# Ingestion

./: .gitignore  API_REFERENCE.md  README.md  content-extraction.md  local-app-extraction.md
accessibility-extractor/: Cargo.toml
accessibility-extractor/src/: extractor.rs  lib.rs  main.rs  storage_bridge.rs  types.rs
accessibility-extractor/src/platform/: mod.rs
accessibility-extractor/src/platform/macos/: applescript.rs  electron.rs  element.rs  file_extract.rs  mod.rs  permissions.rs  roles.rs
accessibility-extractor/tests/: cli_tests.rs
chrome-extension/: manifest.json
chrome-extension/background/: service-worker.js
chrome-extension/content/: index.js
chrome-extension/content/extractors/: gdocs.js  jira.js
chrome-extension/icons/: README.md
chrome-extension/lib/: readability.min.js
chrome-extension/offscreen/: offscreen.html  offscreen.js
docs/: PROJECT_ARCHITECTURE.md  accessibility-api-extraction.md
docs/implementation/: chromium.md  ocr-extraction.md  safari.md  teams.md  unified-router-context.md  unified-router.md
ingestion-service/: Cargo.toml
ingestion-service/src/: chunker.rs  dedup.rs  lib.rs  payload.rs  server.rs  storage.rs
native-host/: Cargo.toml  EHL_DATA_MAPPING.md  README.md  com.clace.extension.json  com.yourapp.ingestion_host.json
native-host/src/: main.rs
ocr-extractor/: Package.swift
ocr-extractor/Sources/OCRExtractor/: main.swift
ocr-extractor/Sources/OCRExtractorLib/: ActivityMonitor.swift  ContentProcessor.swift  IngestionClient.swift  OCREngine.swift  OCRExtractionService.swift  PrivacyFilter.swift  ScreenCaptureEngine.swift
ocr-extractor/Sources/OCRExtractorLib/Types/: CaptureTypes.swift
ocr-extractor/Tests/OCRExtractorTests/: OCRExtractorTests.swift
scripts/: build-all.sh  ingestion  setup.sh
unified-router/: Cargo.toml  README.md  build.rs
unified-router/src/: capture.rs  change_detector.rs  config.rs  lib.rs  main.rs  privacy.rs  router.rs  types.rs  window_tracker.rs
unified-router/src/extractors/: accessibility.rs  chrome.rs  mod.rs  ocr.rs
viewer-app/: index.html  package-lock.json  package.json  vite.config.ts
viewer-app/src/: App.css  App.test.tsx  App.tsx  styles.css
viewer-app/src-tauri/: Cargo.toml  tauri.conf.json
viewer-app/src-tauri/icons/: .gitkeep  icon.icns
viewer-app/src-tauri/src/: lib.rs  main.rs
viewer-app/src-tauri/src/db/: mod.rs  tests.rs  types.rs
viewer-app/src/components/: ContentCard.tsx  DetailModal.tsx  EmptyState.tsx  ErrorState.tsx  GridView.tsx  Header.tsx  LoadingState.tsx  SourceLogo.tsx  index.ts
viewer-app/src/components/__tests__/: ContentCard.test.tsx  DetailModal.test.tsx
viewer-app/src/hooks/: index.ts  useContentDetail.ts  useContentSources.ts
viewer-app/src/types/: index.ts
viewer-app/src/utils/: sourceConfig.ts  truncate.ts
viewer-app/src/utils/__tests__/: sourceConfig.test.ts  truncate.test.ts
