[package]
name = "accessibility-extractor"
version = "0.1.0"
edition = "2021"
description = "Extract content from desktop applications using Accessibility APIs"

[lib]
name = "accessibility_extractor"
path = "src/lib.rs"

[[bin]]
name = "ax-extractor"
path = "src/main.rs"

[[bin]]
name = "ax-daemon"
path = "src/bin/ax-daemon.rs"

[[bin]]
name = "slack-debug"
path = "src/bin/slack-debug.rs"

[[bin]]
name = "teams-debug"
path = "src/bin/teams-debug.rs"

[[bin]]
name = "teams-deep-debug"
path = "src/bin/teams-deep-debug.rs"

[[bin]]
name = "teams-extract-test"
path = "src/bin/teams-extract-test.rs"

[[bin]]
name = "teams-chromium-debug"
path = "src/bin/teams-chromium-debug.rs"

[[bin]]
name = "teams-full-attr-debug"
path = "src/bin/teams-full-attr-debug.rs"

[[bin]]
name = "teams-enable-ax"
path = "src/bin/teams-enable-ax.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
zip = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
regex-lite = "0.1"  # Lightweight regex for timestamp parsing
# Direct file parsing (no AppleScript/Automation prompts)
calamine = "0.26"  # Excel: xlsx, xls, xlsb, ods
docx-rs = "0.4"    # Word: docx
snap = "1.1"       # Snappy decompression for iWork files
libc = "0.2"       # Native proc_pidinfo API

[target.'cfg(target_os = "macos")'.dependencies]
accessibility = "0.2"
accessibility-sys = "0.2"
core-foundation = "0.10"
macos-accessibility-client = "0.0.2"
cocoa = "0.26"
objc = "0.2"

[dev-dependencies]
proptest = "1.4"
pretty_assertions = "1.4"
