[package]
name = "ingestion-service"
version = "0.1.0"
edition = "2021"
description = "Browser content ingestion service with dedup and chunking"

[lib]
name = "ingestion_service"
path = "src/lib.rs"

[[bin]]
name = "ingestion-server"
path = "src/bin/server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1.0", features = ["full", "net", "sync", "rt-multi-thread", "macros"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
regex = "1.10"
url = "2.5"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.0"
