[package]
name = "viewer-app"
version = "0.1.0"
description = "Desktop viewer for ingested content"
authors = ["you"]
edition = "2021"

[lib]
name = "viewer_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
notify = "6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
